--- a/app/src/main/res/layout-land/activity_splash.xml
+++ b/app/src/main/res/layout-land/activity_splash.xml
@@ -19,13 +19,14 @@
             android:layout_margin="@dimen/activity_vertical_margin"
             android:layout_weight="2"/>
         <ImageView
-            android:layout_width="175dp"
-            android:layout_height="175dp"
+            android:layout_width="@dimen/logo_size"
+            android:layout_height="@dimen/logo_size"
             android:src="@drawable/icon"
             android:adjustViewBounds="true"
             android:cropToPadding="false"
             android:scaleType="fitCenter"
-            android:layout_weight="0.3"/>
+            android:layout_weight="0.3"
+            android:contentDescription="@string/logo_desc"/>
     </LinearLayout>
 
 
