--- a/app/src/main/res/layout-land/fragment_translate.xml
+++ b/app/src/main/res/layout-land/fragment_translate.xml
@@ -13,15 +13,14 @@
         android:id="@+id/panel_translate_langs"
         android:layout_below="@id/progress_translate"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/lang_bar_height"
         android:orientation="horizontal">
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_lang_primary"
             style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="English"/>
+            android:layout_weight="1"/>
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/btn_lang_swap"
             android:layout_width="0dp"
@@ -36,8 +35,7 @@
             style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Russian"/>
+            android:layout_weight="1"/>
     </LinearLayout>
 
     <LinearLayout
