--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,12 +12,13 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:layout_margin="@dimen/activity_vertical_margin"/>
     <ImageView
-        android:layout_width="175dp"
-        android:layout_height="175dp"
+        android:layout_width="@dimen/logo_size"
+        android:layout_height="@dimen/logo_size"
         android:layout_centerInParent="true"
         android:src="@drawable/icon"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
+        android:contentDescription="@string/logo_desc"
         android:scaleType="fitCenter" />
 
     <LinearLayout
