--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -18,7 +18,7 @@
                 android:gravity="center">
                 <ImageButton
                     android:id="@+id/btn_history"
-                    android:layout_margin="5dp"
+                    android:layout_margin="@dimen/offset_inner"
                     android:layout_width="@dimen/item_history_historybtn_size"
                     android:minHeight="@dimen/item_history_historybtn_size"
                     android:layout_alignParentLeft="true"
@@ -28,6 +28,7 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:layout_centerVertical="true"
+                    android:contentDescription="@string/desc_history_btn"
                     />
                 <ImageButton
                     android:id="@+id/btn_navigate_translate"
@@ -40,7 +41,8 @@
                     android:scaleType="fitCenter"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:contentDescription="@string/desc_navigate_translate"/>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -75,7 +77,7 @@
             </RelativeLayout>
             <TextView
                 android:id="@+id/txt_history_date"
-                android:padding="5dp"
+                android:padding="@dimen/offset_inner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/DateText"
