--- a/app/src/main/res/layout/item_lang.xml
+++ b/app/src/main/res/layout/item_lang.xml
@@ -4,13 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minWidth="300dp"
+    android:minWidth="@dimen/dialog_size"
     android:orientation="horizontal"
     android:padding="@dimen/offset_medium">
         <TextView
             android:id="@+id/item_lang_code"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
-            android:layout_width="75dp"
+            android:layout_width="@dimen/lang_code_width"
             android:textAlignment="center"
             android:layout_height="wrap_content"/>
         <TextView
